src/app.css
:root {
	font-family: 'Raleway', sans-serif;
	font-size: 16px;

	--pink: #ffaa7a;
	--light-pink: #ffe5d6;
	--light-green: #8bc385;
	--green: #3a8033;
	--dark-green: #1a3f16;
	--yellow: #ffd500;
	--white: white;
	--black: black;
	--bg-pink: rgba(255, 229, 214, 0.25);

	--rounded: 1rem;

	--wave-height: 8dvw;

	--box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.35);
}

* {
	box-sizing: border-box;
} /* Switch to border-box for box-sizing. */

body {
	margin: 0; /* Remove the tiny space around the edge of the page */

	display: grid;

	grid-template-areas:
		'navigation'
		'header'
		'main'
		'banner'
		'footer';

	grid-template-rows: min-content min-content 1fr min-content;

	height: 100dvh;
}

img,
video,
canvas,
audio,
iframe,
embed,
object {
	display: block; /* Switch display mode to block, since that's what we usually want for images. */
	vertical-align: middle; /* If you override, and make an image inline, it's likely you'll want middle vertical alignment. */
}

img {
	max-width: 100%;
	max-height: auto;

	vertical-align: middle;
	font-style: italic;
	background-repeat: no-repeat;
	background-size: cover;
}

ul {
	line-height: 1.5rem;
}

.image {
	border: 3px solid var(--light-green);
	border-radius: 25px;
	filter: drop-shadow(var(--box-shadow));

	aspect-ratio: 12/8;
	object-fit: cover;
	width: 100%;
}

@keyframes rotate {
	0% {
		transform: rotate(-45deg);
	}
	100% {
		transform: rotate(45deg);
	}
}

button {
	--_background: var(--button-background, var(--light-green));
	--_hover: var(--button-hover, var(--green));
	--_outline: var(--button-outline, var(--black));

	display: flex;
	background: var(--_background);
	border-radius: var(--rounded);
	border: 2px solid var(--black);
	padding: 0.5rem 2rem;
	box-shadow: var(--box-shadow);
	text-align: center;

	font-size: 20px;

	&:hover {
		background: var(--_hover);
	}
	&:focus {
		outline-color: var(--_outline);
		outline-style: solid;
		outline-width: 3px;
	}

	& > :global(svg) {
		animation: rotate 2s infinite;
	}
}

/* Layout */

.stack {
	display: grid;
	grid-template-areas: 'stack';

	& > * {
		grid-area: stack;
	}
}

.content {
	--gap: clamp(1rem, 6vw, 3rem);
	--full: minmax(var(--gap), 1fr);
	--content: min(100ch, 100% - var(--gap) * 2);
	--popout: minmax(0, 2rem);
	--feature: minmax(0, 5rem);

	display: grid;
	grid-template-columns:
		[full-start] var(--full)
		[feature-start] var(--feature)
		[popout-start] var(--popout)
		[content-start] var(--content) [content-end]
		var(--popout) [popout-end]
		var(--feature) [feature-end]
		var(--full) [full-end];

	grid-auto-rows: min-content;

	& > * {
		grid-column: content;
	}

	& .popout {
		grid-column: popout;
	}
	& .feature {
		grid-column: feature;
	}
	& .full {
		grid-column: full;
	}
}
.content-with-sidebar {
	--gap: clamp(1rem, 6vw, 3rem);
	--full: minmax(var(--gap), 1fr);
	--content: min(80ch, 60% - var(--gap));
	--sidebar: min(30ch, 40% - var(--gap) * 2);
	--popout: minmax(0, 2rem);
	--feature: minmax(0, 5rem);

	display: grid;
	grid-template-columns:
		[full-start] var(--full)
		[feature-start] var(--feature)
		[popout-start] var(--popout)
		[content-start] var(--content)
		[content-end] var(--gap)
		[sidebar-start] var(--sidebar) [sidebar-end]
		var(--popout) [popout-end]
		var(--feature) [feature-end]
		var(--full) [full-end];

	grid-auto-rows: min-content;

	& > * {
		grid-column: content;
	}

	& .popout {
		grid-column: popout;
	}
	& .feature {
		grid-column: feature;
	}
	& .full {
		grid-column: full;
	}
	& .sidebar {
		grid-column: sidebar;
		grid-row: 1/100000000;
	}
}

/* Typography */

.title {
	font-family: 'Raleway', sans-serif;
	font-size: 102px;
	font-style: italic;
	font-weight: 600;
	color: var(--green);
}
.white {
	color: var(--white);
}

b,
.bold {
	font-weight: 600;
}

h1,
.heading {
	font-family: 'Martel', sans-serif;
	font-size: 36px;
	font-weight: bold;
	color: var(--green);
}
h2,
.subheading {
	font-family: 'Raleway', sans-serif;
	font-size: 20px;
	font-weight: 600;
}
h3,
h4,
h5,
h6 {
	font-family: 'Raleway', sans-serif;
}

p {
	line-height: 1.5rem;
}

a,
.link {
	font-family: 'Raleway', sans-serif;
	font-weight: bold;
	color: var(--green);
	text-decoration: underline;

	&:hover {
		color: var(--light-green);
	}
}

.large {
	font-size: 20px;
}

input[type='text'],
textarea,
input[type='email'] {
	font-family: 'Raleway', sans-serif;
	display: block;

	box-shadow: var(--box-shadow);

	border: thin solid black;
	border-radius: 10px;
	padding: 0.5rem;
}

.cta {
	padding: 0.5rem 1rem;
	font-size: 20px;
	padding-block: 0.8rem;
	color: var(--black);
	text-decoration: none;

	/* font-style: italic; */

	background: var(--yellow);
	border-radius: var(--rounded);
	border: 2px solid var(--black);
	box-shadow: var(--box-shadow);

	transition: 0.25s;

	&:hover {
		box-shadow: none;
		background: #d6b404;
		color: black;
	}
}

@media (max-width: 600px) {
	.content-with-sidebar {
		--content: min(100ch, 100% - 2 * var(--gap));
		--sidebar: 0;

		& .sidebar {
			grid-column: content;
			grid-row: auto;
		}
	}

	.title {
		font-size: 60px;
	}
}

